--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@ h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
 }
 
-body, .navbar {
+.navbar, .home-callout {
     // Gradient Provided by @_ighost at uiGradient.com
     background: #00c6ff;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
@@ -31,3 +31,17 @@ body, .navbar {
 .navbar {
     border: none;
 }
+
+
+.home-callout {
+    color: white;
+    margin-top: -20px;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
+
+
+
+
+
